argocd_addons/demo-finance-batch/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: finance-batch-ingress
  namespace: finance
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  ingressClassName: nginx-new
  rules:
  - host: batch.lovissoft.com
    http:
      paths:
      - backend:
          serviceName: finance-batch
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: finance-batch-ingress-preview
  namespace: finance
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  ingressClassName: nginx-new
  rules:
  - host: pre-batch.lovissoft.com
    http:
      paths:
      - backend:
          serviceName: finance-batch-preview
          servicePort: 80
